@@ -3,6 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- status bar still messing around
+- xyToOffset() aiob
 - wheel mouse -- option: jEdit mods -vs- system-wide mods
 - rect select and trailing whitespace
 - user's guide:
